gcc/testsuite/g++.dg/cpp0x/nsdmi-dr1397.C
// DR 1397
// { dg-require-effective-target c++11 }

struct A
{
  int i = sizeof(A{});		// { dg-error "" }
};
